コメントアウト修正

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,5 +1,7 @@
+
+
 <div class="choose_box">
-  
+  <%# 最初の選択肢 %>
   <div id="q_01" class="fit">
     <p>質問1</p>
     <ul class="flexbox fw">
@@ -9,8 +11,9 @@
     <li class="odd"><a class="btn" href="#q_05">選択肢4</a></li>
     </ul>
   </div>
-  <!-- 最初の選択肢 -->
+  <%# 最初の選択肢 %>
     
+  <%# 次の選択肢 %>
   <div id="q_02" style="display: none;">
     <p>質問2？</p>
       <ul class="flexbox fw">
@@ -18,8 +21,9 @@
       <li class="odd"><a class="btn" href="#q_07">選択肢1-2</a></li>
       </ul>
   </div>
-  <!-- 次の選択肢 --> 
+  <%# 次の選択肢 %>
   
+  <%# 次の選択肢 %>
   <div id="q_03" style="display: none;">
     <p>質問2？</p>
       <ul class="flexbox fw">
@@ -27,8 +31,9 @@
       <li class="odd"><a class="btn" href="#q_07">選択肢2-2</a></li>
     </ul>
   </div>
-  <!-- 次の選択肢 --> 
+  <%# 次の選択肢 %>
     
+  <%# 次の選択肢 %>
   <div id="q_04" style="display: none;">
     <p>質問2？</p>
       <ul class="flexbox fw">
@@ -36,8 +41,9 @@
       <li class="odd"><a class="btn" href="#q_07">選択肢3-2</a></li>
       </ul>
   </div>
-  <!-- 次の選択肢 --> 
+  <%# 次の選択肢 %>
     
+  <%# 次の選択肢 %>
   <div id="q_05" style="display: none;">
     <p>質問2？</p>
       <ul class="flexbox fw">
@@ -45,22 +51,21 @@
       <li class="odd"><a class="btn" href="#q_07">選択肢4-2</a></li>
     </ul>
   </div>
-  <!-- 次の選択肢 -->
+  <%# 次の選択肢 %>
     
-    
+  <%# 選択肢の答え① %>
   <div id="q_06" style="display: none;">
           <p>あなたにおすすめなのは…</p>
           <h4>『答え①』です！！</h4>
     <span><a class="btn" href="#q_01">もどる</a></span>
   </div>
-  
-  <!-- 選択肢の答え① -->
+  <%# 選択肢の答え① %>
     
-    <div id="q_07" style="display: none;">
+  <%# 選択肢の答え② %>
+  <div id="q_07" style="display: none;">
           <p>あなたにおすすめなのは…</p>
           <h4>『答え②』です！！</h4>
       <span><a class="btn" href="#q_01">もどる</a></span>
   </div>
-  
-  <!-- 選択肢の答え② -->
+  <%# 選択肢の答え② %>
 </div>
