--- a/app/assets/stylesheets/ramen.css
+++ b/app/assets/stylesheets/ramen.css
@@ -68,7 +68,7 @@ h4 {
     font-weight: 600;
     color: #fff;
     text-align: center;
-  background-color: #C00003;
+  background-color: #d4a327;
 }
 
 .fit {
