選択肢変更

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,37 +4,37 @@
 <div class="choose_box">
   <%# 導入 %>
   <div id="q_00" class="fit">
-    <p>ラーメン診断</p>
-    <h3><a class="btn" href="#q_01">スタート</a></h3>
+    <p>あなたのお昼はこちら！！</p>
+    <h3><a class="btn" href="#q_01">のれんをくぐる</a></h3>
   </div>
   <%# 導入 %>
 
   <%# 質問１ %>
   <div id="q_01" style="display: none;">
-    <p>あっさり？ こってり？</p>
+    <p>いらっしゃいませ！！何にしましょう？</p>
     <ul class="flexbox fw">
-      <li class="even"><a class="btn" href="#q_02">あっさり</a></li>
-      <li class="odd"><a class="btn" href="#q_03">こってり</a></li>
+      <li class="even"><a class="btn" href="#q_02">お昼だからあっさりで！</a></li>
+      <li class="odd"><a class="btn" href="#q_03">今日は特別こってりで！</a></li>
     </ul>
   </div>
   <%# 質問１ %>
     
   <%# 質問２ %>
   <div id="q_02" style="display: none;">
-    <p>今の気分は？</p>
+    <p>至高の一杯をお探しなんですね！！どちらになさいますか？</p>
       <ul class="flexbox fw">
-        <li class="even"><a class="btn" href="#q_04">浜の香り〜</a></li>
-        <li class="odd"><a class="btn" href="#q_05">コクと深み..</a></li>
+        <li class="even"><a class="btn" href="#q_04">シンプルだけどに旨味抜群で</a></li>
+        <li class="odd"><a class="btn" href="#q_05">コクと深みが欲しい気分</a></li>
       </ul>
   </div>
   <%# 質問２ %>
   
   <%# 質問３ %>
   <div id="q_03" style="display: none;">
-    <p>今の気分は？</p>
+    <p>満足感をお求めなんですね！どちらになさいますか？</p>
       <ul class="flexbox fw">
-        <li class="even"><a class="btn" href="#q_06">スタミナパワー！！</a></li>
-        <li class="odd"><a class="btn" href="#q_07">優しくマイルド</a></li>
+        <li class="even"><a class="btn" href="#q_06">スタミナつけて午後も頑張りたい！！</a></li>
+        <li class="odd"><a class="btn" href="#q_07">野菜の旨味も欲しい！！</a></li>
     </ul>
   </div>
   <%# 質問３ %>
@@ -42,33 +42,45 @@
   <div class = "answer">
   <%# 選択肢の答え① %>
   <div id="q_04" style="display: none;">
-          <p>あなたにおすすめなのは…</p>
-          <h4>『塩ラーメン』です！！</h4>
+    <p>お客さんにおすすめなのは…磯の香り漂う…</p>
+    <h4>『塩ラーメン』！！</h4>
+    <p>東京 新宿駅東南口徒歩2分</p>
+    <span><a class="btn" href="https://www.google.com/maps/place/%E6%B5%B7%E7%A5%9E/@35.6897387,139.7022277,15z/data=!4m5!3m4!1s0x0:0x9d9889d3100386fc!8m2!3d35.6897387!4d139.7022277?hl=ja">
+    麺屋海神がおすすめ！</a></span>
     <span><a class="btn" href="#q_00">もどる</a></span>
   </div>
   <%# 選択肢の答え① %>
     
   <%# 選択肢の答え② %>
   <div id="q_05" style="display: none;">
-          <p>あなたにおすすめなのは…</p>
-          <h4>『醤油ラーメン』です！！</h4>
-      <span><a class="btn" href="#q_00">もどる</a></span>
+    <p>お客さんにおすすめなのは…定番だけど奥深い…</p>
+    <h4>『醤油ラーメン』！！</h4>
+    <p>東京 秋葉原駅から64m</p>
+    <span><a class="btn" href="#https://www.google.com/maps/place/%E9%BA%BA%E5%87%A6+%E3%81%BB%E3%82%93%E7%94%B0+%E7%A7%8B%E8%91%89%E5%8E%9F%E6%9C%AC%E5%BA%97/@35.6982014,139.7742042,15z/data=!4m5!3m4!1s0x0:0x8c1c910809732f1d!8m2!3d35.6982014!4d139.7742042">
+    麺処ほん田秋葉原本店がおすすめ！</a></span>
+    <span><a class="btn" href="#q_00">もどる</a></span>
   </div>
   <%# 選択肢の答え② %>
 
     <%# 選択肢の答え③ %>
   <div id="q_06" style="display: none;">
-          <p>あなたにおすすめなのは…</p>
-          <h4>『とんこつラーメン』です！！</h4>
+    <p>お客さんにおすすめなのは…ガッツリ食べ応えの…</p>
+    <h4>『とんこつラーメン』！！</h4>
+    <p>岩手県盛岡市でとんこつを食べるなら</p>
+    <span><a class="btn" href="https://www.google.com/maps/place/%E6%A5%B5%E4%B8%8A%E6%8B%89%E9%BA%BA%E5%B0%82%E9%96%80%E5%BA%97+%E7%A9%B4%E5%A0%B4/@39.6401287,141.1664852,17z/data=!3m1!4b1!4m5!3m4!1s0x5f859cc4c94afe69:0xbf87e55e979bd570!8m2!3d39.6401287!4d141.1686739">
+    極上拉麺専門店 穴場がおすすめ！</a></p>
     <span><a class="btn" href="#q_00">もどる</a></span>
   </div>
   <%# 選択肢の答え③ %>
     
   <%# 選択肢の答え④ %>
   <div id="q_07" style="display: none;">
-          <p>あなたにおすすめなのは…</p>
-          <h4>『味噌ラーメン』です！！</h4>
-      <span><a class="btn" href="#q_00">もどる</a></span>
+    <p>お客さんにおすすめなのは…体を芯から温める…</p>
+    <h4>『味噌ラーメン』！！</h4>
+    <p>北のだいち 北海道は札幌！！！</p>
+    <span><a class="btn" href="https://www.google.com/maps/place/%E9%BA%BA%E5%B1%8B+%E5%BD%A9%E6%9C%AA/@43.0352607,141.3819445,15z/data=!4m5!3m4!1s0x0:0xb79d3275402dbccc!8m2!3d43.0352607!4d141.3819445">
+    麺屋彩未がおすすめ！</a></span>
+    <span><a class="btn" href="#q_00">もどる</a></span>
   </div>
   <%# 選択肢の答え④ %>
   </div>
